# HUYNH2k2TT

./: CMakeLists.txt  README.md
SDL_game/: Main.cpp  README.txt  SDL_game.cbp  SDL_game.depend
SDL_game/Header/: Public.hpp  SDL_default.hpp  Show_Background.hpp  Show_BulletBoss.hpp  Show_BulletPlane.hpp  Show_Obstacle.hpp  Solve_Boss.hpp  Solve_Event.hpp  Solve_Level.hpp  Start_Game.hpp
header/: Collision_BulletPlane_And_BulletBoss.hpp  Collision_BulletPlane_And_Obstacle.hpp  Design_Broad.hpp  End_Game.hpp  Prepare.hpp  Public.hpp  Show.hpp  Show_Background.hpp  Show_Boss.hpp  Show_BulletBoss.hpp  Show_BulletPlane.hpp  Show_Menu.hpp  Show_Obstacle.hpp  Show_Plane.hpp  Solve_BulletBoss.hpp  Solve_Collision.hpp  Solve_Obstacle.hpp  Solve_Pause.hpp  Start_Game.hpp
src/: Main.cpp  score.text
window/: SDL_game.layout
window/Header/: Collision_BulletPlane_And_Boss.hpp  Collision_Plane_And_Boss.hpp  Collision_Plane_And_BulletBoss.hpp  Collision_Plane_And_Obstacle.hpp  Design_Broad.hpp  End_Game.hpp  Show_Boss.hpp  Show_Menu.hpp  Show_Plane.hpp  Solve_BulletPlane.hpp  Solve_Music.hpp  Solve_Pause.hpp  Solve_Plane.hpp
